# books_fastapi

./: .gitignore  README.md  books.py  db.json  db2.json  pyproject.toml
books_fastapi/: books.py  books2.py  database.py  main.py
books_fastapi/apps/: books.py  books2.py
books_fastapi/models/: books2.py
books_fastapi/routes/: __init__.py  books.py  books2.py
