[tool.poetry]
name = "books-fastapi"
version = "0.1.0"
description = "Books - Criando um crud de livros para testes de requisição"
authors = ["eduardolirainfo <eduardolirainfo@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
start = "books_fastapi.main:main"


[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
tinydb = "^4.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
